app/assets/stylesheets/extra.css.scss
.welcome_background {
  background-image: url('cab.jpg');
  background-repeat: no-repeat;
  background-size: cover;
  height: 800px;
}

#bar {
  margin: 0;
}

.col-md-4 {
  margin-left: 10px !important;
  margin-right: 0px;
}

.content {
  padding: 40px, 20px, 20px, 20px;
}

.trip_show {
  background-image: url('city.jpg');
  background-size: cover;
  background-repeat: no-repeat;
  height: 800px;
  margin: 0;
  padding: 0;
  width: 100%;
}

.display {
  background-color: white;
  opacity: 0.7;
  padding: 10px;
  margin-right: 5%;
  width: 26.66%;
}

.first {
  margin-left: 5%;
}

.banner {
  background-color: white;
  opacity: 0.7;
  padding: 20px;
  margin-right: 5%;
  margin-left: 5%;
  width: 90%;
  text-align: center;
}

.display {
  padding: 10px;
  margin-right: 5%;
  width: 26.66%;
}

.centered_text {
  text-align: center;
}

.centered_vertical {
  text-align: center;
  line-height: 400px;
  padding-left: 200px;
}

.user_name {
  color: white;
  opacity: 0.7;
}

